<resources>
    <string name="app_name">Daftar Film dan Acara Tv</string>
    <string name="title">Daftar Film dan Acara Tv </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_show">TV Show</string>
    <string name="moview">Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Judul Movie</string>
    <string name="deskripsi_movie">Deskripsi Movie</string>
    <string name="detail">Detail</string>
    <string name="tvshow_title">Judul TV Show</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tahun">Tahun</string>
    <string name="change_language_settings">Change Language</string>
    <string name="tanggal">Tanggal</string>
    <string name="deskripsi_tvshow">Deskripsi</string>
    <string-array name="data_movie_name">
        <item>Alita</item>
        <item>Aquaman</item>
        <item>Bohemian</item>
        <item>Crimes</item>
        <item>Glass</item>
        <item>How to Train Your Dragon</item>
        <item>Infinity War</item>
        <item>Marry Queen</item>
        <item>Master Z</item>
        <item>Mortal Engine</item>
        <item>Overload</item>
        <item>Ralph Breaks the Internet</item>
    </string-array>
    <string-array name="data_photo_movie">
        <item>@drawable/poster_alita</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_crimes</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_how_to_train</item>
        <item>@drawable/poster_infinity_war</item>
        <item>@drawable/poster_marry_queen</item>
        <item>@drawable/poster_master_z</item>
        <item>@drawable/poster_mortal_engines</item>
        <item>@drawable/poster_overlord</item>
        <item>@drawable/poster_ralph</item>
    </string-array>
    <string-array name="tahun_movie">
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2015</item>
        <item>2018</item>
        <item>2019</item>
        <item>2010</item>
        <item>2018</item>
        <item>2018</item>
        <item>2009</item>
        <item>2018</item>
    </string-array>
    <string-array name="data_desc_movie">
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>The former World Heavyweight Champion Rocky Balboa serves as a trainer and mentor to Adonis Johnson, the son of his late friend and former rival Apollo Creed.</item>
        <item>Gellert Grindelwald has escaped imprisonment and has begun gathering followers to his cause—elevating wizards above all non-magical beings. The only one capable of putting a stop to him is the wizard he once called his closest friend, Albus Dumbledore. However, Dumbledore will need to seek help from the wizard who had thwarted Grindelwald once before, his former student Newt Scamander, who agrees to help, unaware of the dangers that lie ahead. Lines are drawn as love and loyalty are tested, even among the truest friends and family, in an increasingly divided wizarding world.</item>
        <item>In 1561, Mary Stuart, widow of the King of France, returns to Scotland, reclaims her rightful throne and menaces the future of Queen Elizabeth I as ruler of England, because she has a legitimate claim to the English throne. Betrayals, rebellions, conspiracies and their own life choices imperil both Queens. They experience the bitter cost of power, until their tragic fate is finally fulfilled.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Following his defeat by Master Ip, Cheung Tin Chi (Zhang) tries to make a life with his young son in Hong Kong, waiting tables at a bar that caters to expats. But it s not long before the mix of foreigners, money…</item>
        <item>Many thousands of years in the future, Earths cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>Rachel is killed. A year later Kate, a young jazz DJ, finds Ted, her boyfriend, in bed with another woman. She leaves Boston for her mothers place in Vermont. There, she finds that her problems with her mother havent gone away, and that her grandmother, her mothers enemy, has just moved in because of memory problems. Ted follows Kate to Vermont, Kate meets Hal, and murder, romance, and family intrigue follow.</item>
        <item>Video game bad guy Ralph and fellow misfit Vanellope von Schweetz must risk it all by traveling to the World Wide Web in search of a replacement part to save Vanellopes video game, "Sugar Rush." In way over their heads, Ralph and Vanellope rely on the citizens of the internet -- the netizens -- to help navigate their way, including an entrepreneur named Yesss, who is the head algorithm and the heart and soul of trend-making site BuzzzTube.</item>
    </string-array>
    <string-array name="data_tvshow_name">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Gotham</item>
        <item>Gray Anatomy</item>
        <item>Hanna</item>
        <item>Iron First</item>
        <item>Naruto Shipudden</item>
        <item>Ncis</item>
    </string-array>
    <string-array name="data_photo_tvshow">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_grey_anatomy</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_iron_fist</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_ncis</item>
    </string-array>
    <string-array name="tahun_tvshow">
        <item>2012</item>
        <item>2019</item>
        <item>1986</item>
        <item>2009</item>
        <item>1999</item>
        <item>2014</item>
        <item>2014</item>
        <item>2005</item>
        <item>2019</item>
        <item>2017</item>
        <item>2007</item>
        <item>2003</item>
    </string-array>
</resources>